    (R. Capote)
43. Scaling of the direct and total cross-sections automatically considered
    in the elastic cross section (R. Capote). The obtained ENDF file is consistent.
    no further adjustment of the elastic channel is required.
43. Isomeric states automatically detected, their cross sections calculated
    (also with the ENDF>0 option) and printed (M. Herman and R.Capote)
        
        Changes in version 2.19beta24 with respect to 2.18  
                      Brookhaven, February  2004

1.  Error in the Wilmore-Hodgson omp corrected.
    VOM(4, Nejc, Nnuc) set to -0.0018 instead of -0.00018. This coefficient
    was also found to be wrong in the preliminary version of RIPL-2
    (M. Herman).
2.  MSD is automatically turned off for non-nucleon incident reactions
    (M. Herman).
3.  Internal conversion coefficients included in the gamma cascade
    between discrete levels (ICC data from RIPL-2)(M. Herman).
4.  Bug in reading branching ratios from the RIPL-2 file corrected
    (emission probabilities instead of branching ratios were used
    in the previous RIPL-2 versions) (R. Capote).
5.  Bug in DEGAS resulting in lack of the preequilibrium population in
    the Compound Nucleus continuum corrected (bug has been introduced in
    version 2.18) (E. Betak).
6.  ENDRES code and BNL-325 file with resonance parameters added in order
    to merge resonance parameters into the final ENDF file (also dxsend.f
    has been updated) (A. Trkov).
7.  LINEAR and RECENT utility codes added in order to reconstruct cross
    sections from the resonance parameters and enable plotting
    (M. Herman & A. Trkov).
8.  Some potentially empty files removed if actually empty (M. Herman).
9.  run, runE, format and plot scripts modified to avoid double coding
    (M. Herman).
10. Processing with FIXUP split into two runs to avoid redundant data
    in the final ENDF file (reconstruction of 203 and 207 postponed to the
    second run) (M. Herman).